--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "next-starter",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Eindrasap",
+    "url": "https://twitter.com/eindrasap"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
