--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "autoprefixer": "^10.4.13",
+    "husky": "^8.0.2",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
