--- a/package.json
+++ b/package.json
@@ -10,28 +10,44 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write --ignore-unknown .",
+    "prettier:check": "prettier --check --ignore-unknown .",
+    "test": "yarn prettier:check && yarn lint"
   },
   "dependencies": {
     "@next/font": "13.0.7",
-    "@types/node": "18.11.17",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
     "clsx": "^1.2.1",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.8.0",
-    "typescript": "4.9.4"
+    "tailwind-merge": "^1.8.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7",
     "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
+    "release-please": "^15.0.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --max-warnings=0",
+      "prettier --write --ignore-unknown"
+    ],
+    "*.{json,css,scss,md}": [
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
