--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "next-starter",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "author": {
     "name": "Eindrasap",
@@ -11,6 +11,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "release": "standard-version",
     "prettier": "prettier --write --ignore-unknown .",
     "prettier:check": "prettier --check --ignore-unknown .",
     "test": "yarn prettier:check && yarn lint"
@@ -37,7 +38,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "release-please": "^15.0.0",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
