--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "release": "standard-version",
     "prettier": "prettier --write ./**/*.{ts,tsx}",
     "prettier:check": "prettier --check ./**/*.{ts,tsx}",
-    "test": "yarn prettier:check && yarn lint"
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -28,6 +29,9 @@
   "devDependencies": {
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -35,6 +39,8 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "husky": "^8.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
